# pi-dal

./: .gitignore  CLAUDE.md  README.md  build_readme.py  pyproject.toml
.github/workflows/: build.yml  claude-code-review.yml  claude-code.yml  fork-sync.yaml  gitee-mirror.yml  profile-3d.yml  snk.yml  update-blog-activity.yml  update-github-activity.yml  update-readme.yml  wakatime.yml
tests/: test_build_readme.py
