[project]
name = "pi-dal"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "pi-dal", email = "hi@pi-dal.com"},
]
dependencies = ["requests>=2.32.4", "feedparser>=6.0.11", "pytz>=2025.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
